--- a/express/.gitignore
+++ b/express/.gitignore
@@ -1,5 +1,9 @@
-.vscode
 
+# CUSTOM
+# .env
+# .env.test
+
+# DEFAULT
 # Logs
 logs
 *.log
@@ -70,9 +74,7 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-.env.test
+
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
