--- a/express/package.json
+++ b/express/package.json
@@ -17,6 +17,8 @@
         "hbs": "^4.1.2",
         "html": "^1.0.0",
         "lodash": "^4.17.21",
+        "mongoose": "^6.0.12",
+        "mongose": "^0.0.2-security",
         "morgan": "^1.10.0"
     }
 }
